# reregulation-provider-registry

./: .gitignore  .zenodo.json  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  reregulation-registry-v1-spec.md
completeness/: __init__.py  db.py  frame_reconcile.py  inventory_fetch.py  ledger.py  models.py  report.py  us_states.py
docs/: ai_use.md  az_abs.md  data_dictionary.md  data_note.md  methodology.md  sampling_frame.md  v2_readiness.md
models/: enums.py  schema.py
pipeline/: audit.py  backfill_authorized_events.py  db.py  diff.py  export.py  orchestrate.py  reproduce.py  scrape.py  snapshot.py  wayback.py
resolve/: normalize.py  program_status.py
scrapers/: arizona_abs.py  arizona_lp.py  base.py  california_lda.py  colorado_llp.py  dc_rule54.py  fetchers.py  minnesota_lp.py  texas_alp.py  utah_lpp.py  utah_sandbox.py  washington_entity_pilot.py  washington_lllt.py
scripts/: build_datapackage.py  export_release.py  export_viz.py  migrate_relative_storage_paths.py  migrate_remove_provider_fk.py  run_az_abs.py  run_az_lp.py  run_ca_lda.py  run_co_llp.py  run_dc_rule54.py  run_mn_lp.py  run_tx_alp.py  run_ut_lpp.py  run_utah_sandbox.py  run_wa_entity_pilot.py  run_wa_lllt.py  seed_programs.py
tests/: conftest.py  test_arizona_abs.py  test_arizona_lp.py  test_audit_reproduce_paths.py  test_california_lda.py  test_colorado_llp.py  test_dc_rule54.py  test_diff.py  test_export_viz.py  test_fetchers.py  test_frame_reconcile.py  test_minnesota_lp.py  test_models.py  test_program_coverage.py  test_program_status.py  test_smoke.py  (+8 more)
(+50 files in other folders)
