[project]
name = "reregulation-registry"
version = "1.0.0"
description = "Open, reproducible, longitudinal dataset of U.S. legal-services reregulation providers"
requires-python = ">=3.12"
license = { text = "MIT AND CC-BY-4.0" }
dependencies = [
    "httpx>=0.27",
    "playwright>=1.44",
    "selectolax>=0.3.21",
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "pydantic>=2.7",
    "polars>=0.20",
    "duckdb>=1.0",
    "rapidfuzz>=3.9",
    "recordlinkage>=0.16",
    "pyarrow>=16.0",
    "frictionless>=5.18",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scrapers", "models", "resolve", "pipeline", "completeness"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["models", "scrapers", "pipeline", "resolve", "completeness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "slow: marks tests as slow",
    "net: requires live network (excluded from CI fixture-only runs)",
]
